--- a/src/ApHomePage/ApHomePage.css
+++ b/src/ApHomePage/ApHomePage.css
@@ -19,13 +19,25 @@ h1, h2, h3, h4, h5, h6 {
 
 .input_box {
     margin-top: 2vh;
-    width: 100%;
+    width: 60%;
     border-radius: 4px;
     padding: 1%;
     transition: all 0.5s;
 }
 
 .input_box:hover {
+    transform: scale(1.02);
+}
+
+.apuesta_box {
+    margin: 2vh;
+    width: 15%;
+    border-radius: 4px;
+    padding: 1%;
+    transition: all 0.5s;
+}
+
+.apuesta_box:hover {
     transform: scale(1.02);
 }
 
