--- a/src/ApHomePage/ApHomePage.css
+++ b/src/ApHomePage/ApHomePage.css
@@ -4,9 +4,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .home_size {
+    margin: 0;
+    padding: 0;
     width: 100vw;
     height: 100vh;
-    background-color: pink;
+    background-image: url(./Bg-casino.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .content_box {
@@ -14,49 +18,130 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0 auto;
     height: max-content;
     display: block;
-    position: relative;
 }
+
+.title_h1 {
+    width: 100vw;
+    background-color: #000000;
+    font-size: 32px;
+    font-weight: bold;
+    color: #ffffff;
+    margin: 0;
+    padding: 2vh;
+}
+
+.generation_apuesta {
+    margin-top: 4vh;
+    display: block;
+    width: 100%;
+    height: max-content;
+    padding: 2% 0;
+}
+
+.saldo_histo_content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.saldo {
+    color: #ffffff;
+    text-align: left;
+    width: max-content;
+}
+
+h3 {
+    font-weight: 500;
+}
+
+.histoCont {
+    color: #ffffff;
+    text-align: right;
+    width: max-content;
+}
+
+.inputs_content {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.apuesta_content {
+    width: 40%;
+    padding: 3vh 0;
+}
+
+.button_content {
+    width: 20%;
+    padding: 3vh 0;
+}
+
+.apuesta_h3 {
+    font-size: 24px;
+    color: #ffffff;
+    text-align: left;
+    width: max-content;
+    padding-bottom: 3vh;
+}
+
 
 .input_box {
-    margin-top: 2vh;
-    width: 60%;
+    width: 80%;
     border-radius: 4px;
-    padding: 1%;
-    transition: all 0.5s;
-}
-
-.input_box:hover {
-    transform: scale(1.02);
-}
-
-.apuesta_box {
-    margin: 2vh;
-    width: 15%;
-    border-radius: 4px;
-    padding: 1%;
-    transition: all 0.5s;
-}
-
-.apuesta_box:hover {
-    transform: scale(1.02);
-}
-
-.input_box:focus {
-    transform: scale(1.02);
+    margin: 0;
+    padding: 2%;
+    float: left;
+    font-size: 16px;
 }
 
 .button_box {
     margin: 0;
-    margin-top: 2vh;
-    padding: 1% 3%;
-    border-radius: 8px;
-    background-color: #ffffff;
-    transition: all 0.5s;
+    border:none;
+    border-radius: 18px;
+    background-color: #eeeeee;
+    height: 100%;
+    width: 100%;
+    transition: all 0.1s;
     cursor: pointer;
+    font-size: 32px;
+}
+
+.button_box:hover {
+    background-color: #ffffff;
+    outline: 2px solid #ffffff;
 }
 
 .button_box:disabled {
     background-color: #444444;
+}
+
+.result_apuesta{
+    width: 100%;
+    display: flex;
+}
+
+.result_apuesta_content {
+    width: 50%;
+}
+
+.apuesta_res {
+    color: #ffffff;
+    text-align: left;
+    width: max-content;
+}
+
+.res_dados {
+    color: #ffffff;
+    text-align: left;
+    width: max-content;
+    margin-top: 4vh;
+}
+
+.result_box {
+    margin-top: 4vh;
+    position: relative;
+    width: 100px;
+    height: 100px;
+    border: 4px solid #ffffff;
 }
 
 .results {
@@ -67,11 +152,44 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #n1 {
- font-size: 24px;
- font-weight: bold;   
+    color: #ffffff;
+    font-size: 42px;
+    height: max-content;
+    margin: auto;
+    font-weight: bold; 
+    position: absolute;
+    top:0; bottom: 0; left: 0; right: 0; 
 }
 
 #n2 {
-    font-size: 24px;
-    font-weight: bold;   
+    color: #ffffff;
+    font-size: 42px;
+    height: max-content;
+    margin: auto;
+    font-weight: bold; 
+    position: absolute;
+    top:0; bottom: 0; left: 0; right: 0; 
+   }
+
+   .historial_result_content {
+    width: 30%;
+    height: max-content;
+   }
+
+   .historial_result {
+    width: 100%;
+    height: max-content;
+    max-height: 35vh;
+    background-color: #212121;
+    overflow: scroll;
+    overflow-x: hidden;
+    padding: 2% 1%;
+    margin-top: 5vh;
+   }
+
+   .histo_result {
+    font-size: 16px;
+    line-height: 24px;
+    text-align: left;
+    color: #ffffff;
    }
